@@ -1042,7 +1042,6 @@ $3...
 'confirmunprotecttext' => 'Наистина ли искате да свалите защитата на страницата?',
 'confirmunprotect' => 'Потвърдете свалянето на защитата',
 'unprotectcomment' => 'Причина за сваляне на защитата',
-'protectreason' => '(посочете причина)',
 
 # Undelete
 'undelete' => 'Възстановяване на изтрита страница',
